[package]
name = "bras"
version = "0.1.1"
edition = "2021"
authors = ["Israel Yago Pereira <26233246+israelyago@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
description = "Library for parsing brazilian documents"
homepage = "https://github.com/israelyago/bras"
repository = "https://github.com/israelyago/bras"

[dependencies]
